finished basic game

--- a/main.html
+++ b/main.html
@@ -39,6 +39,11 @@
             </div>
         </div>
     </div>
+    <div id="popUpWin">You won! Play again?
+        <form>
+            <button type="submit">For sure!</button>
+        </form>
+    </div>
     <script src="https://code.jquery.com/jquery-3.0.0.min.js"></script>
     <script src="./script/script.js"></script>
 </body>
