removed draft script

--- a/main.html
+++ b/main.html
@@ -18,32 +18,33 @@
                 <span id="card2id" class="card"></span>
                 <span id="card3id" class="card"></span>
                 <span id="card4id" class="card"></span>
-                <span id="card5id" class="card"></span>
-                <span id="card6id" class="card"></span>
             </div>
             <div class="row">
+                <span id="card5id" class="card"></span>
+                <span id="card6id" class="card"></span>
                 <span id="card7id" class="card"></span>
                 <span id="card8id" class="card"></span>
+            </div>
+            <div class="row">
                 <span id="card9id" class="card"></span>
                 <span id="card10id" class="card"></span>
                 <span id="card11id" class="card"></span>
                 <span id="card12id" class="card"></span>
             </div>
-            <div class="row">
-                <span id="card13id" class="card"></span>
-                <span id="card14id" class="card"></span>
-                <span id="card15id" class="card"></span>
-                <span id="card16id" class="card"></span>
-                <span id="card17id" class="card"></span>
-                <span id="card18id" class="card"></span>
-            </div>
         </div>
+        <form>
+            <button id="giveUpBtn" type="submit">Giving up?</button>
+        </form>
     </div>
     <div id="popUpWin">You won! Play again?
         <form>
             <button type="submit">For sure!</button>
         </form>
     </div>
+    <audio controls autoplay>
+        <source src="./images/bensound-littleidea.mp3" type="audio/ogg">
+    </audio>
+
     <script src="https://code.jquery.com/jquery-3.0.0.min.js"></script>
     <script src="./script/script.js"></script>
 </body>
